--- a/src/app/components/main-body/main-body.scss
+++ b/src/app/components/main-body/main-body.scss
@@ -167,24 +167,29 @@
   flex-direction: column;
 }
 
+.tab-label-content {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  line-height: 1;
+}
+
 .tab-icon {
-  height: 1em;
+  height: 12px;
   width: auto;
-  margin-right: 4px;
-  vertical-align: middle;
+  display: block;
 }
 
 .tab-emoji {
   font-size: 12px;
-  margin-right: 4px;
-  vertical-align: middle;
   line-height: 1;
 }
 
 .tab-label-text {
-  font-size: 12px;  // Reduced from 14px
+  font-size: 12px;
   font-weight: 500;
   margin: 0;
+  line-height: 1;
 }
 
 .tab-content {
